@@ -2,6 +2,8 @@ Nutch Change Log
 
 Release 1.3 - Current Development
 
+* NUTCH-975 Fix missing/wrong headers in source files (markus)
+
 * NUTCH-963 Add support for deleting Solr documents with STATUS_DB_GONE in CrawlDB (Claudio Martella, markus)
 
 * NUTCH-825 Publish nutch artifacts to central maven repository (mattmann, jnioche)
